--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@ body {
   }
   
   ol, ul {
-    padding-left: 30px;
+    margin-left: 0; 
+    padding-left: 0;
+    width: 100px;
   }
   
   .board-row:after {
@@ -55,4 +57,9 @@ body {
     margin-left: auto;
     margin-right: auto;
   }
+
+  li {
+    list-style-type: none;
+    margin-bottom: 10px;
+   }
   
