--- a/src/index.css
+++ b/src/index.css
@@ -50,12 +50,13 @@ body {
   }
   
   .game-info {
-    margin-left: 20px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .game-board {
-    margin-left: auto;
-    margin-right: auto;
+    display: flex;
+    width: 100%;
   }
 
   li {
@@ -63,3 +64,9 @@ body {
     margin-bottom: 10px;
    }
   
+   .position {
+       max-width: 200px;
+       min-height: 100px;
+       width: 100%;
+       background-color: #fff;
+   }
